[package]
name = "target_triple"
authors = [ "Wink Saville <wink@saville.com" ]
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2021"
rust-version = "1.66"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
current_platform = "0.2.0"
